Prevents popovers from spilling out from the card

--- a/app/assets/stylesheets/_board.scss
+++ b/app/assets/stylesheets/_board.scss
@@ -442,20 +442,29 @@
         width: 300%;
 
         .hb-avatar-tooltip {
+
           &.multi {
             position: relative;
             display: inline;
             float: right;
             margin-left: -6px;
           }
-        }
 
-        .hb-avatar-tooltip {
-          &.single{
+          &.single {
             position: absolute;
             bottom: 0px;
             right: 0px;
             padding: 5px;
+          }
+
+          &:hover {
+            p {
+              right: 0px;
+              white-space: nowrap;
+              &:after{
+                left: 66%;
+              }
+            }
           }
         }
       }
